--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,9 @@
 				<groupId>org.antlr</groupId>
 				<artifactId>antlr4-maven-plugin</artifactId>
 				<version>4.1</version>
+				<configuration>
+				    <listener>false</listener>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
