--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,11 @@
 	<groupId>falgout.jrepl</groupId>
 	<artifactId>jrepl</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.antlr</groupId>
@@ -12,6 +17,7 @@
 			<version>4.2</version>
 		</dependency>
 	</dependencies>
+	
 	<build>
 		<resources>
 			<resource>
@@ -24,13 +30,14 @@
 				</excludes>
 			</resource>
 		</resources>
+		
 		<plugins>
 			<plugin>
 				<groupId>org.antlr</groupId>
 				<artifactId>antlr4-maven-plugin</artifactId>
 				<version>4.1</version>
 				<configuration>
-				    <listener>false</listener>
+					<listener>false</listener>
 				</configuration>
 				<executions>
 					<execution>
@@ -50,6 +57,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		
 		<pluginManagement>
 			<plugins>
 				<!--This plugin's configuration is used to store Eclipse m2e settings 
