--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
 			<groupId>com.google.code.findbugs</groupId>
 			<artifactId>jsr305</artifactId>
 			<version>2.0.3</version>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
