--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 		<dependency>
 			<groupId>com.google.inject</groupId>
 			<artifactId>guice</artifactId>
-			<version>3.0</version>
+			<version>4.0-beta</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.tycho</groupId>
