--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
 			<version>2.0.3</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.inject.extensions</groupId>
+			<artifactId>guice-assistedinject</artifactId>
+			<version>4.0-beta4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
